first try to compute scores for binary spatial relations